--- a/vue-store/src/assets/css/layout.css
+++ b/vue-store/src/assets/css/layout.css
@@ -2,17 +2,37 @@ html {
 	height: 100%;
 	overflow-x: auto; }
 
-* {
-	box-sizing: border-box; }
+*,
+*::before,
+*::after {
+	box-sizing:border-box;
+}
 
 body {
 	height: 100%;
-	font-family: 'Nanum Gothic', '나눔 고딕', 'apple sd gothic neo', "Open Sans", sans-serif;
+	font-family: 'Nanum Gothic', '나눔 고딕','Noto Sans KR', 'apple sd gothic neo', 'Noto Sans', 'Open Sans', sans-serif;
 	padding: 0px !important;
 	margin: 0px !important;
-	direction: "ltr";
-	font-size: 13px;
-	line-height: 1.5; }
+	font-size: 14px;
+	line-height: 1.6; }
+
+a {
+	color:inherit;
+	-webkit-transition: 0.4s;
+	-o-transition: 0.4s;
+	transition: 0.4s;
+	text-decoration: none;
+}
+
+a:hover,
+a:focus {
+	outline: none;
+}
+
+h1,h2,h3,h4,h6 {
+    font-weight: 700;
+    line-height: 1.3;
+}
 
 .text-center {
 	text-align:center !important; }
@@ -20,31 +40,121 @@ body {
 .text-right {
 	text-align:right !important; }
 
-.gap-top-5 {
+.pt-5 {
 	padding-top:5px; }
 
-.gap-top-10 {
+.pt-10 {
 	padding-top:10px; }
 
 .mt-5 {
 	margin-top:5px; }
 
-.help-block {
-	display:block;
-	margin:0 5px;
-	padding:5px 0 0; }
+button {
+	background-color: transparent;
+	border: none;
+	cursor: pointer;
+	outline: none;
+	padding: 0;
+	-webkit-box-shadow: none;
+	box-shadow: none;
+	-webkit-transition: 0.4s;
+	-o-transition: 0.4s;
+	transition: 0.4s;
+}
+
+button:active,
+button:focus {
+	outline: none;
+	-webkit-box-shadow: none;
+	box-shadow: none;
+}
+
+.bg-img {
+    background: #dddddd no-repeat center center;
+    background-size: cover;
+}
+
+.parallaxBg {
+    background-attachment: fixed;
+}
+/*** utility ***/
+
+.mx-10, .ml-10 { margin-left:10px; }
+.mx-10, .mr-10 { margin-right:10px; }
+.mx-20, .ml-20 { margin-left:20px; }
+.mx-20, .mr-20 { margin-right:20px; }
+.mt-10, .my-10 { margin-top:10px; }
+.mb-10, .my-10 { margin-bottom:10px; }
+.mt-20, .my-20 { margin-top:20px; }
+.mb-20, .my-20 { margin-bottom:20px; }
+.mt-40, .my-40 { margin-top:40px; }
+.mb-40, .my-40 { margin-bottom:40px; }
+
+.mx-n10 { margin-left:-10px; margin-right:-10px; }
+
+.px-10, .pl-10 { padding-left:10px; }
+.px-10, .pr-10 { padding-right:10px; }
+.px-20, .pl-20 { padding-left:20px; }
+.px-20, .pr-20 { padding-right:20px; }
+.pt-10, .py-10 { padding-top:10px; }
+.pb-10, .py-10 { padding-bottom:10px; }
+.pt-20, .py-20 { padding-top:20px; }
+.pb-20, .py-20 { padding-bottom:20px; }
+.pt-40, .py-40 { padding-top:40px; }
+.pb-40, .py-40 { padding-bottom:40px; }
+
+@media(max-width:575.9px) {
+    .mx-xs-auto {   /* 2020.10.5.*/
+        margin-left:auto!important;
+        margin-right:auto!important;
+    }
+}
+
+@media(min-width:576px) {
+    .px-sm-15 { padding-left:15px!important; padding-right:15px!important; }
+}
+
+.font-weight-300 {
+    font-weight:300!important;
+}
+.font-weight-400 {
+    font-weight:400!important;
+}
+.font-weight-500 {
+    font-weight:500!important;
+}
+.font-weight-600 {
+    font-weight:600!important;
+}
+
+.hv-100 {
+    height: 100vh;
+}
+
+/*** layout ***/
+
+.container { 
+	margin-right:15px; 
+	margin-left:15px; 
+	padding-left:15px; 
+	padding-right:15px; 
+}
 
 .page-container {
-	position: relative;  }
-	.page-container:after {
-		content:"";
-		display:table;
-		clear:both }
+	position: relative;  
+	display:flex;
+}
+
+.content-wrapper { 
+	position:relative;
+	display:block; 
+	flex:1 1 auto;
+}
 
 .page-sidebar {
 	width: 235px;
 	height: 100%;
-	position: absolute; }
+	min-height:100vh; }
 	.page-sidebar .sb-logo {
 		padding: 15px 20px; }
 		.page-sidebar .sb-logo img {
@@ -130,13 +240,19 @@ body {
 	padding: 0 0 20px;
 	min-height: 560px; }
 
+.navbar.top {
+	font-size:16px;
+	min-height:50px;
+	padding:0.5rem 1rem;
+}
+
+
 .page-footer {
-	padding: 10px 40px;
-	clear:left; }
-	.page-footer:after {
-		content: " ";
-		display: table; 
-		clear:both; }
+	position:absolute;
+	bottom:0;
+	left:0;
+	right:0;
+	padding: 10px 40px;}
 	.page-footer .copyright {
 		float: left;
 		font-size: 13px;
@@ -153,42 +269,6 @@ ul.nav-footer li {
 	padding: 0 10px;
 	font-size:12px;
 	white-space: nowrap; }
-
-
-.page-container.login {
-	height:100%;
-	min-height:400px; }
-
-#page-login {
-	width: 80%;
-	max-width: 400px;
-	margin: auto;
-	position: absolute;
-	top: 40%;
-	left: 50%; 
-	transform: translate(-50%, -50%); }
-
-#page-login .logo {
-	margin:0 auto 50px;
-	text-align:center; }
-	#page-login .logo img {
-		height:100px;	}
-		#page-login .btn {
-		margin-top: 5px;
-		padding: 10px 25px;
-		font-weight: 600;  }
-	.login .content .form-control {
-		display:block;
-		padding:6px 12px;
-		font-size: 14px;
-		height:43px;	}
-	.login .content .form-actions {
-		clear:both;
-		border:0;
-		padding-top:0;
-		min-width:0;	}
-	.login .content .form-actions span, .login .content .form-actions a {
-		vertical-align:middle;	}
 
 /******* Components ********/
 
@@ -449,26 +529,11 @@ input[type=checkbox] {
 		.btn-new:after { content: "신규등록"; }
 	}
 
-/*.w3-responsive {
-		overflow-x: auto;  }*/
-
-/* w3.css의 table style */
-.w3-table {
-	border-collapse: collapse;
-	border-spacing: 0;
-	width: 100%;
-	display: table; }
-	.w3-table td, .w3-table th {
-		padding: 8px;
-		display: table-cell;
-		text-align: left;
-		white-space: nowrap; }
-		.w3-table td:not(:last-child) {
-			min-width:100px;  }
-
-	.w3-table td:first-child, .w3-table th:first-child {
-		padding-left: 10px; }
-
+.help-block {
+	display:block;
+	margin:0 5px;
+	padding:5px 0 0; }
+	
 
 /* for Store info page - Contact 입력폼 스타일 */
 .form-group > td {
@@ -493,11 +558,6 @@ table.tile td, table.tile th {
 
 table.tile th {
 	text-align: left; }
-
-/* w3.css의 leftbar + panel */
-	.w3-leftbar {
-		margin: 0 40px 20px;
-		padding: .01em 16px; }
 
 /* store info page의 address */
 #store_addr, #store_addr2 {
