--- a/vue-store/src/assets/css/layout.css
+++ b/vue-store/src/assets/css/layout.css
@@ -236,8 +236,7 @@ button:focus {
 		text-align: left; }
 
 .page-content {
-	margin-left: 235px;
-	padding: 0 0 20px;
+	padding: 20px;
 	min-height: 560px; }
 
 .navbar.top {
