--- a/vue-store/src/assets/css/ip-colors.css
+++ b/vue-store/src/assets/css/ip-colors.css
@@ -4,9 +4,10 @@
     --ip-green:#48c0c1;
     --darknavy:#3c4a55;
     --ip-gbb:#4e3946;
-    --lightgrey-border:#d6d6d6;
-    --lightgrey-bg:#eee;
+    --border-lightgrey:#d6d6d6;
+    --bg-lightgrey:#eee;
     --text-dark:#222;
     --text-grey:#888;
     --text-light:#fff;
+    --ip-green-hover:#26a1ab;
 }
