--- a/vue-store/src/assets/css/layout.css
+++ b/vue-store/src/assets/css/layout.css
@@ -34,9 +34,15 @@ h1,h2,h3,h4,h6 {
     line-height: 1.3;
 }
 
+p {
+	margin-top:0.5rem;
+	margin-bottom:0.5rem;
+}
+
+.text-left {
+	text-align:left !important; }
 .text-center {
 	text-align:center !important; }
-
 .text-right {
 	text-align:right !important; }
 
@@ -51,10 +57,11 @@ h1,h2,h3,h4,h6 {
 
 button {
 	background-color: transparent;
-	border: none;
+	border: 1px solid var(--primary);
+	color:var(--primary);
 	cursor: pointer;
 	outline: none;
-	padding: 0;
+	padding: 0.5rem 1rem;
 	-webkit-box-shadow: none;
 	box-shadow: none;
 	-webkit-transition: 0.4s;
