--- a/vue-store/src/assets/css/layout.css
+++ b/vue-store/src/assets/css/layout.css
@@ -46,15 +46,6 @@ p {
 .text-right {
 	text-align:right !important; }
 
-.pt-5 {
-	padding-top:5px; }
-
-.pt-10 {
-	padding-top:10px; }
-
-.mt-5 {
-	margin-top:5px; }
-
 button {
 	background-color: transparent;
 	border: 1px solid var(--primary);
@@ -86,6 +77,25 @@ button:focus {
 }
 /*** utility ***/
 
+.pt-5 {	padding-top:5px; }
+.pt-30 { padding-top:30px; }
+
+.px-10, .pl-10 { padding-left:10px; }
+.px-10, .pr-10 { padding-right:10px; }
+.px-20, .pl-20 { padding-left:20px; }
+.px-20, .pr-20 { padding-right:20px; }
+.pt-10, .py-10 { padding-top:10px; }
+.pb-10, .py-10 { padding-bottom:10px; }
+.pt-20, .py-20 { padding-top:20px; }
+.pb-20, .py-20 { padding-bottom:20px; }
+.pt-40, .py-40 { padding-top:40px; }
+.pb-40, .py-40 { padding-bottom:40px; }
+
+.mt-5 {	margin-top:5px; }
+.mt-30 { margin-top:30px; }
+.mb-5 { margin-bottom:5px; }
+.mb-30 { margin-bottom:30px; }
+
 .mx-10, .ml-10 { margin-left:10px; }
 .mx-10, .mr-10 { margin-right:10px; }
 .mx-20, .ml-20 { margin-left:20px; }
@@ -98,17 +108,6 @@ button:focus {
 .mb-40, .my-40 { margin-bottom:40px; }
 
 .mx-n10 { margin-left:-10px; margin-right:-10px; }
-
-.px-10, .pl-10 { padding-left:10px; }
-.px-10, .pr-10 { padding-right:10px; }
-.px-20, .pl-20 { padding-left:20px; }
-.px-20, .pr-20 { padding-right:20px; }
-.pt-10, .py-10 { padding-top:10px; }
-.pb-10, .py-10 { padding-bottom:10px; }
-.pt-20, .py-20 { padding-top:20px; }
-.pb-20, .py-20 { padding-bottom:20px; }
-.pt-40, .py-40 { padding-top:40px; }
-.pb-40, .py-40 { padding-bottom:40px; }
 
 @media(max-width:575.9px) {
     .mx-xs-auto {   /* 2020.10.5.*/
@@ -277,6 +276,33 @@ ul.nav-footer li {
 	white-space: nowrap; }
 
 /******* Components ********/
+.card {
+	position:relative;
+	display:flex;
+	flex-direction:column;
+	min-width:0;
+	word-wrap:break-word;
+	background-clip:border-box;
+	border:1px solid var(--border-lightgrey);
+	border-radius:2px;
+}
+
+.card.light {
+	background-color:#fff;
+	color:var(--text-dark);
+}
+
+.card-header {
+	padding:0.75rem 1.25rem;
+	margin-bottom:0;
+	background-color:#f8f8f8;
+	border-bottom:1px solid var(--border-lightgrey);
+}
+.card-body {
+	flex:1 1 auto;
+	min-height:1px;
+	padding:1.25rem; 
+}
 
 ul.breadcrumb {
 	padding: 10px 40px;
