--- a/vue-store/src/assets/css/layout.css
+++ b/vue-store/src/assets/css/layout.css
@@ -297,6 +297,8 @@ ul.nav-footer li {
 	margin-bottom:0;
 	background-color:#f8f8f8;
 	border-bottom:1px solid var(--border-lightgrey);
+	display:flex;
+	justify-content:space-between;
 }
 .card-body {
 	flex:1 1 auto;
