--- a/vue-store/src/assets/css/layout.css
+++ b/vue-store/src/assets/css/layout.css
@@ -146,12 +146,17 @@ button:focus {
 	padding-right:15px; 
 }
 
+.container-fluid {
+	padding-left:15px;
+	padding-right:15px;
+}
+
 .page-container {
 	position: relative;  
 	display:flex;
 }
 
-.content-wrapper { 
+.page-content-wrapper { 
 	position:relative;
 	display:block; 
 	flex:1 1 auto;
@@ -242,8 +247,7 @@ button:focus {
 		text-align: left; }
 
 .page-content {
-	padding: 20px;
-	min-height: 560px; }
+	padding: 20px 15px; }
 
 .navbar.top {
 	font-size:16px;
