--- a/vue-store/src/assets/css/ip-colors.css
+++ b/vue-store/src/assets/css/ip-colors.css
@@ -5,7 +5,7 @@
     --darknavy:#3c4a55;
     --ip-gbb:#4e3946;
     --border-lightgrey:#d6d6d6;
-    --bg-lightgrey:#eee;
+    --bg-lightgrey:#f5f3f4;
     --text-dark:#222;
     --text-grey:#888;
     --text-light:#fff;
